--- a/CoffeeBytes_01.ipynb
+++ b/CoffeeBytes_01.ipynb
@@ -62,7 +62,7 @@
         "colab_type": "text"
       },
       "source": [
-        "You might wanna make a copy of this noPress the play button (and enable playground mode) to the left of the code so you can see the output!"
+        "You might want to make a copy of this noPress the play button (and enable playground mode) to the left of the code so you can see the output!"
       ]
     },
     {
