--- a/CoffeeBytes_01.ipynb
+++ b/CoffeeBytes_01.ipynb
@@ -318,7 +318,7 @@
         "\n",
         "If you haven't joined the ***CoffeeBytes*** chat, click [here](https://discord.gg/h5CUxx6)!\n",
         "\n",
-        "# see you next time!\n"
+        "# See you next time!\n"
       ]
     }
   ]
