--- a/CoffeeBytes_01_ACM.ipynb
+++ b/CoffeeBytes_01_ACM.ipynb
@@ -14,12 +14,16 @@
       "display_name": "Python 3"
     }
   },
-  "cells": [
+   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "3gxSYKZAlKmG",
+        "id": "view-in-github",
         "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/enrprz/CoffeeBytes/blob/master/CoffeeBytes_01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
       },
       "source": [
         "For this first review, we will be going over boolean variables and some simple operations. For all the examples here, feel free to mess around with the code and see which different outputs you can get.\n",
