--- a/CoffeeBytes_01_ACM.ipynb
+++ b/CoffeeBytes_01_ACM.ipynb
@@ -1,20 +1,19 @@
 {
-  
   "nbformat": 4,
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
       "name": "CoffeeBytes_01_ACM.ipynb",
-      "version": "0.3.2",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
     }
   },
-   "cells": [
+  "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
@@ -22,9 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "For this first review, we will be going over boolean variables and some simple operations. For all the examples here, feel free to mess around with the code and see which different outputs you can get.\n",
-        "\n",
-        "**Please remember that all variables defined are global, so altering them later on will affect them at every code block.**"
+        "<a href=\"https://colab.research.google.com/github/enrprz/CoffeeBytes/blob/master/CoffeeBytes_01_ACM.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -241,6 +238,91 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8GgbR_qrvFW2",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Find 33\n",
+        "\n",
+        "## Given a list of ints, return True if the array contains a 3 next to a 3 somewhere.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fGI2zFN8vNY4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "has_33([1, 3, 3]) → True\n",
+        "has_33([1, 3, 1, 3]) → False\n",
+        "has_33([3, 1, 3]) → False"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1OcJkhu9vR-c",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Solution: "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pn1UDo3-vQOM",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def has_33(nums):\n",
+        "    for i, x in enumerate(nums):\n",
+        "        if x == 3:\n",
+        "            #Check if index at end of list        \n",
+        "            if i == len(nums) - 1: return False\n",
+        "            elif nums[i + 1] == 3: return True"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_1d0QBMqvbMf",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "5e2c0226-0034-4040-a902-553677cc5e68"
+      },
+      "source": [
+        "has_33([1, 3, 3])"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
     }
   ]
 }
