--- a/CoffeeBytes_01_ACM.ipynb
+++ b/CoffeeBytes_01_ACM.ipynb
@@ -25,6 +25,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hAKbwBLqwUmR",
+        "colab_type": "text"
+      },
+      "source": [
+        "For this first review, we will be going over boolean variables and some simple operations. For all the examples here, feel free to mess around with the code and see which different outputs you can get.\n",
+        "\n",
+        "### Please remember that all variables defined are global, so altering them later on will affect them at every code block."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "W1nTNmShlLnn",
