--- a/CoffeeBytes_02_ACM.ipynb
+++ b/CoffeeBytes_02_ACM.ipynb
@@ -27,47 +27,71 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "hAKbwBLqwUmR",
+        "id": "FUU9a9TYlLJv",
         "colab_type": "text"
       },
       "source": [
-        "For this first review, we will be going over boolean variables and some simple operations. For all the examples here, feel free to mess around with the code and see which different outputs you can get.\n",
-        "\n",
-        "### Please remember that all variables defined are global, so altering them later on will affect them at every code block."
+        "Before We begin, please fill out this quick survey to get a better sense of how we are doing in CoffeeBytes and of were you guys are at knowledge wise so far.\n",
+        "-------------------------------------------------------------------------------\n",
+        "[Super Cool Survey Link](https://enrique266012.typeform.com/to/FFaemv)\n",
+        "----------------------------------------------------------"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "W1nTNmShlLnn",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "_a = False\n",
-        "_b = True\n",
-        "\n",
-        "print(_a or _b)\n",
-        "print(_a and _b)\n",
-        "\n",
-        "_a =  not _a\n",
-        "print(_a and _b)\n",
-        "\n",
-        "print(not _a or not _b)\n",
-        "\n",
-        "# Before you run this, think about which outputs you will get."
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6BJTnF7kmVl6",
+        "id": "hAKbwBLqwUmR",
         "colab_type": "text"
       },
       "source": [
-        "Next we will review integer variables and some simple operations."
+        "For this lesson, we will be implementing two well known algorithms: Binary Search and Quick Sort!\n",
+        "--\n",
+        "\n",
+        "Binary Search \n",
+        "-------------\n",
+        "- Runtime: Worst case: O(log(n)) VERY FAST\n",
+        "- Cons: Requires a pre-sorted array to work.\n",
+        "\n",
+        "Quick Sort\n",
+        "-----------\n",
+        "- Average Case: O(nlog(n)) PRETTY FAST\n",
+        "- Cons: Runtime Worse Case: O(n^2)\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AjItjAGBmL-i",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Quick Sort is a divide and Conquer Algorithm. What does that mean? It means recursion!\n",
+        "\n",
+        "## Quick Sort Algorithm: Steps on how it works:\n",
+        "1. Find a “pivot” item in the array. This item is the basis for comparison for a single round.\n",
+        "\n",
+        "2. Start a pointer (the left pointer) at the first item in the array.\n",
+        "\n",
+        "3. Start a pointer (the right pointer) at the last item in the array.\n",
+        "\n",
+        "4. While the value at the left pointer in the array is less than the pivot value, move the left pointer to the right (add 1). Continue until the value at the left pointer is greater than or equal to the pivot value.\n",
+        "\n",
+        "5. While the value at the right pointer in the array is greater than the pivot value, move the right pointer to the left (subtract 1). Continue until the value at the right pointer is less than or equal to the pivot value.\n",
+        "\n",
+        "6. If the left pointer is less than or equal to the right pointer, then swap the values at these locations in the array.\n",
+        "\n",
+        "7. Move the left pointer to the right by one and the right pointer to the left by one.\n",
+        "\n",
+        "8. If the left pointer and right pointer don’t meet, go to step 1.\n",
+        "\n",
+        "![alt text](https://miro.medium.com/max/600/1*DtH6fEdBhoUGnjBWudJ8pA.png)\n",
+        "\n",
+        "\n",
+        "## [Video Link of video explanation](https://www.youtube.com/watch?time_continue=25&v=SLauY6PpjW4)\n",
+        "\n"
       ]
     },
     {
