--- a/CoffeeBytes_02_ACM.ipynb
+++ b/CoffeeBytes_02_ACM.ipynb
@@ -68,30 +68,33 @@
         "colab_type": "text"
       },
       "source": [
-        "## Quick Sort is a divide and Conquer Algorithm. What does that mean? It means recursion!\n",
+        "## Quick Sort is a Divide and Conquer Algorithm. What does that mean? It means recursion!\n",
         "\n",
         "## Quick Sort Algorithm: Steps on how it works:\n",
-        "1. Find a “pivot” item in the array. This item is the basis for comparison for a single round.\n",
+        "1. Pick an element, called a pivot, from the array.\n",
         "\n",
-        "2. Start a pointer (the left pointer) at the first item in the array.\n",
+        "2. Partitioning: reorder the array so that all elements with values less than the pivot come before the pivot, while all elements with values greater than the pivot come after it (equal values can go either way). After this partitioning, the pivot is in its final position. This is called the partition operation.\n",
         "\n",
-        "3. Start a pointer (the right pointer) at the last item in the array.\n",
-        "\n",
-        "4. While the value at the left pointer in the array is less than the pivot value, move the left pointer to the right (add 1). Continue until the value at the left pointer is greater than or equal to the pivot value.\n",
-        "\n",
-        "5. While the value at the right pointer in the array is greater than the pivot value, move the right pointer to the left (subtract 1). Continue until the value at the right pointer is less than or equal to the pivot value.\n",
-        "\n",
-        "6. If the left pointer is less than or equal to the right pointer, then swap the values at these locations in the array.\n",
-        "\n",
-        "7. Move the left pointer to the right by one and the right pointer to the left by one.\n",
-        "\n",
-        "8. If the left pointer and right pointer don’t meet, go to step 1.\n",
+        "3. Recursively apply the above steps to the sub-array of elements with smaller values and separately to the sub-array of elements with greater values.\n",
         "\n",
         "![alt text](https://miro.medium.com/max/600/1*DtH6fEdBhoUGnjBWudJ8pA.png)\n",
         "\n",
         "\n",
         "## [Video Link of video explanation](https://www.youtube.com/watch?time_continue=25&v=SLauY6PpjW4)\n",
+        "\n",
+        "\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WwBt0fWb5JbN",
+        "colab_type": "text"
+      },
+      "source": [
+        "Step 1: Implement the partition!\n",
+        "-----\n"
       ]
     },
     {
@@ -102,20 +105,10 @@
         "colab": {}
       },
       "source": [
-        "_num1 = 1\n",
-        "_num2 = 2\n",
-        "\n",
-        "print(_num1 * _num2)\n",
-        "\n",
-        "_num1 = _num2 + 4\n",
-        "_num2 = _num1 * 2\n",
-        "\n",
-        "print(_num1)\n",
-        "print(_num2)\n",
-        "\n",
-        "_num1 = 4 / _num2\n",
-        "\n",
-        "print(_num1)\n"
+        "def partition(sort_list, low, high):\n",
+        "  #implement\n",
+        "  pass\n",
+        "\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -123,11 +116,13 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "B36daFVmnLp5",
+        "id": "nuzJ1Keu5bSe",
         "colab_type": "text"
       },
       "source": [
-        "We can also use variables to store characters and strings"
+        "Step 2: Implement the Recursive QuickSort!\n",
+        "-----------\n",
+        "\n"
       ]
     },
     {
@@ -138,48 +133,10 @@
         "colab": {}
       },
       "source": [
-        "_char1 = 'a'\n",
-        "_char2 = 'b'\n",
-        "_myString = \"I love python\"\n",
-        "print(_char1 + _char2)\n",
-        "print(_myString)\n",
-        "print(_char1 + 2) # Why does this produce an error?\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "XrmGwFJSp1ah",
-        "colab_type": "text"
-      },
-      "source": [
-        "Lastly for this review, we'll go over lists."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "jaVayT4Np0aW",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "_myList = [0,1,2]\n",
-        "print(_myList)\n",
-        "\n",
-        "_myList.append(3)\n",
-        "\n",
-        "# Yes, you can have multiple data types in one list!\n",
-        "_myList.insert(3, \"I shouldn't belong here\")\n",
-        "print(_myList)\n",
-        "\n",
-        "print(\"_myList is\", len(_myList), \"items long.\\n\")\n",
-        "\n",
-        "# Print the second item on the list.\n",
-        "\n",
-        "# Print the last item on the list, should work for any list length."
+        "def quick_sort(sort_list, low, high):\n",
+        "  #implement\n",
+        "  pass\n",
+        "  \n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -191,86 +148,24 @@
         "colab_type": "text"
       },
       "source": [
-        "**Open Ended Problems**"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "HJQgs3h0rCQT",
-        "colab_type": "text"
-      },
-      "source": [
-        "1) Create a list that holds strings of all North American countries."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "wU2tc4OWsBGr",
-        "colab_type": "text"
-      },
-      "source": [
-        "2) For each country, append each countries population. ex: \"USA: 327,200,000\", and print the new list/array one by one."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "bAtbKq8_hIHE",
-        "colab_type": "text"
-      },
-      "source": [
-        "3) Create 3 variables, choose any variable name. One variable should hold a string, the other variable an integer, and the last variable should hold a floating point number."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "hX_kX4exhTk_",
-        "colab_type": "text"
-      },
-      "source": [
-        "4) Try to add all 3 variables defined above and have it result in a floating point integer."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "WncU_qQWnRbX",
-        "colab_type": "text"
-      },
-      "source": [
-        "5) Create a string variable containing \"Helo Worl\". Next insert the missing characters into the string. The result should be \"Hello World\". Print the variable for testing."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "pKgME94RkKks",
-        "colab_type": "text"
-      },
-      "source": [
-        "**Solve each problem below.**"
+        "Step 3: Test it!\n",
+        "----"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rmJjn5yUjQVV",
+        "id": "6thPtwNL6J2X",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "# Problem 1\n",
+        "lst = [7, 3, 1, 2, 0, 5, 2]\n",
         "\n",
-        "# Problem 2\n",
-        "\n",
-        "# Problem 3\n",
-        "\n",
-        "# Problem 4\n",
-        "\n",
-        "# Problem 5"
+        "low = 0\n",
+        "high = len(lst) - 1\n",
+        "quick_sort(lst, low, high)\n",
+        "print(lst)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -278,26 +173,64 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "8GgbR_qrvFW2",
+        "id": "ru_SPCnE8uX3",
         "colab_type": "text"
       },
       "source": [
-        "# Find 33\n",
+        "Binary Search is also a Divide and Conquer Algorithm. It requires a sorted list, but thats fine since we now have a working sort algorithm :D (QuickSort) It finds an element in a list in O(log(n)) time, or returns False otherwise.\n",
+        "--------\n",
+        "1. Compare x with the middle element.\n",
         "\n",
-        "## Given a list of ints, return True if the array contains a 3 next to a 3 somewhere.\n"
+        "2. If x matches with middle element, we return the mid index.\n",
+        "\n",
+        "3. Else If x is greater than the mid element, then x can only lie in right half subarray after the mid element. So we recurse for right half.\n",
+        "\n",
+        "4. Else (x is smaller) recurse for the left half.\n",
+        "\n",
+        "![alt text](https://www.java2blog.com/wp-content/uploads/2015/07/BinarySearchInJava-1.jpg)\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EzbQUi2o9npX",
+        "colab_type": "text"
+      },
+      "source": [
+        "Step 1: Implement Binary Search Step by Step!\n",
+        "---"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fGI2zFN8vNY4",
+        "id": "NzwTLCQwBjLy",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "has_33([1, 3, 3]) → True\n",
-        "has_33([1, 3, 1, 3]) → False\n",
-        "has_33([3, 1, 3]) → False"
+        "def binarySearch(alist, item):\n",
+        "  # Base Case (Do what?)\n",
+        "    if :\n",
+        "        return \n",
+        "    # Recursive Case\n",
+        "    else:\n",
+        "        # Compute Midpoint\n",
+        "        midpoint = \n",
+        "        \n",
+        "        # What happens if the midpoint is where item is?\n",
+        "        if :\n",
+        "            return \n",
+        "        \n",
+        "        # What happens otherwise?\n",
+        "        else:\n",
+        "            \n",
+        "            # Recurse left or right. How do you decide?\n",
+        "            if :\n",
+        "                return binarySearch()\n",
+        "            else:\n",
+        "                return binarySearch()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -305,60 +238,28 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "1OcJkhu9vR-c",
+        "id": "S3sMafIn_YW7",
         "colab_type": "text"
       },
       "source": [
-        "## Solution: "
+        "Step 2: Test it!\n",
+        "---"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pn1UDo3-vQOM",
+        "id": "mXolg0Zd_a6M",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "def has_33(nums):\n",
-        "    for i, x in enumerate(nums):\n",
-        "        if x == 3:\n",
-        "            #Check if index at end of list        \n",
-        "            if i == len(nums) - 1: return False\n",
-        "            elif nums[i + 1] == 3: return True"
+        "test = [0, 1, 2, 8, 13, 17, 19, 32, 42,]\n",
+        "print(binarySearch(test, 3))\n",
+        "print(binarySearch(test, 13))"
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_1d0QBMqvbMf",
-        "colab_type": "code",
-        "outputId": "5e2c0226-0034-4040-a902-553677cc5e68",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
-      },
-      "source": [
-        "has_33([1, 3, 3])"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 3
-        }
-      ]
     }
   ]
 }
