--- a/CoffeeBytes_05.ipynb
+++ b/CoffeeBytes_05.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "name": "CoffeeBytes_05.ipynb",
-      "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -22,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/enrprz/CoffeeBytes/blob/master/CoffeeBytes_05.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/enrprz/CoffeeBytes/blob/temp/CoffeeBytes_05.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -124,8 +123,7 @@
         "  \n",
         "  # Function to display inside the class\n",
         "  def display(self):\n",
-        "    string = \"%s %s, %d.\" % (self.make, self.model, self.value)\n",
-        "    return string\n",
+        "    print(self.make, self.model, self.value)\n",
         "  \n",
         "# Create an object car and assign values:\n",
         "\n",
@@ -135,7 +133,7 @@
         "carObject.value = 18745\n",
         "\n",
         "# Now 'call' the display function inside your 'carObject':\n",
-        "print(carObject.display())"
+        "carObject.display()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -156,7 +154,7 @@
         "  value = 0\n",
         "  \n",
         "  # Function to display inside the class\n",
-        "  def display(self):\n",
+        "  def getData(self):\n",
         "    string = \"%s %s, %d.\" % (self.make, self.model, self.value)\n",
         "    return string\n",
         "\n",
@@ -189,7 +187,7 @@
         "  value = 0\n",
         "  \n",
         "  # Function to display inside the class\n",
-        "  def display(self):\n",
+        "  def getData(self):\n",
         "    string = \"%s %s, %d.\" % (self.make, self.model, self.value)\n",
         "    return string\n",
         "\n",
@@ -204,8 +202,8 @@
         "suv.value = 64300\n",
         "\n",
         "# Now display the values inside your 'car' and 'suv' object:\n",
-        "print(car.display())\n",
-        "print(suv.display())\n"
+        "print(car.getData())\n",
+        "print(suv.getData())\n"
       ],
       "execution_count": 0,
       "outputs": []
