--- a/CoffeeBytes_3_ACM.ipynb
+++ b/CoffeeBytes_3_ACM.ipynb
@@ -116,9 +116,25 @@
         "colab": {}
       },
       "source": [
-        "# After awhile, I'll show my solution here!\n",
+        "'''\n",
+        "This problem is interesting because, due to the fact that the string is repeated\n",
+        "infinitely, theres a way to make your solution very inefficient. The first way I \n",
+        "thought of approaching this is to repeat the string 's' an n number of times, then iterate through it and count a.\n",
+        "However, n can be any number 0 <= n <= 10^6, so while doing this creates a solution\n",
+        "that is O(n), i.e.m it scales in slowness linearly to your variable n, theres a way to \n",
+        "make this O(1), i.e., a constant number of computations! Behold the solution below. \n",
+        "'''\n",
         "def repeatedString(s, n):\n",
-        "  pass"
+        "    # The number of a's in s\n",
+        "    numA = s.count('a')\n",
+        "    # The number of repeats of s in n \n",
+        "    numS = n//len(s)\n",
+        "    # The potentially cutoff string of s at the end of n\n",
+        "    cutoff = s[:n%len(s)]\n",
+        "    # The number of a's in the cutoff\n",
+        "    numA_Cutoff = cutoff.count('a')\n",
+        "\n",
+        "    return numA * numS + numA_Cutoff"
       ],
       "execution_count": 0,
       "outputs": []
@@ -189,9 +205,23 @@
         "colab": {}
       },
       "source": [
-        "# After Awhile, I'll post my solution here!\n",
-        "def LeftRotation(A, d):\n",
-        "  pass"
+        "    '''\n",
+        "In my solution, I create an empty list of size equal to list 'A', with all None elements.\n",
+        "The reason for this is because as you move the indices by d movements to the left,\n",
+        "swapping the elements in place using only the list A (and no extra empty list), you overwrite\n",
+        "the elements you have yet to swap, resulting in lost elements and an incorrect rotation.\n",
+        "Keeping the list A unmodifed and copying its elements into their rotated positions in rotA \n",
+        "solves this issue.\n",
+        "    '''\n",
+        "\n",
+        "def leftRotation(A, d):\n",
+        "    # None list of size len(A)\n",
+        "    rotA = [None for x in range(len(A))]\n",
+        "    # Iterate through A to get elements\n",
+        "    for i in range(len(A)):\n",
+        "        # Copy elements from A into their correct elements in rotA\n",
+        "        rotA[i - d] = A[i]\n",
+        "    return rotA"
       ],
       "execution_count": 0,
       "outputs": []
